updated logging for signal handler and controller module

--- a/todo
+++ b/todo
@@ -1,4 +1,6 @@
 catch errors for wrong parameters, out of map thing
 sigsev when error with object detector
-sighandler logging
-controller device stuff with logging format
+
+# Ideas for the future
+
+Maybe change error log to throw instead of just print?
